Bug 479248 - Help has invalid URL
Summary: Help has invalid URL
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-01 14:06 UTC by Tim
Modified: 2024-12-19 10:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim 2024-01-01 14:06:49 UTC
SUMMARY
Clicking the "Help" button while setting up an account opens an invalid URL

STEPS TO REPRODUCE
1. Install on a fresh system
2. Click "Next" until arriving at the checking account setup
3. Click "Help"

OBSERVED RESULT
Browser opens an invalid URL

EXPECTED RESULT
Help page is opened

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linx
(available in About System)
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.113.0
Qt Version: 5.15.11

ADDITIONAL INFORMATION
The invalid URL opened is https://docs.kde.org/stable5/en/kmymoney/kmymoney/firsttime-3.html
Comment 1 Thomas Baumgart 2024-01-02 09:32:54 UTC
Git commit c29012e25bd265711e71c40245125439fd4eebde by Thomas Baumgart.
Committed on 02/01/2024 at 10:32.
Pushed by tbaumgart into branch 'master'.

Fix link to documentation
FIXED-IN: 5.2

M  +1    -1    kmymoney/wizards/newuserwizard/knewuserwizard.cpp

https://invent.kde.org/office/kmymoney/-/commit/c29012e25bd265711e71c40245125439fd4eebde
Comment 2 Thomas Baumgart 2024-01-07 10:32:33 UTC
Git commit ca3da80c608c4105d23468b2cf206ae6e1e12670 by Thomas Baumgart.
Committed on 07/01/2024 at 11:14.
Pushed by tbaumgart into branch '5.1'.

Fix link to documentation
FIXED-IN: 5.1.4
(cherry picked from commit c29012e25bd265711e71c40245125439fd4eebde)

M  +1    -1    kmymoney/wizards/newuserwizard/knewuserwizard.cpp

https://invent.kde.org/office/kmymoney/-/commit/ca3da80c608c4105d23468b2cf206ae6e1e12670