Fix link to documentation

BUG: 479248
FIXED-IN: 5.2